[gd_scene load_steps=11 format=3 uid="uid://b3m0db3jdkfeq"]

[ext_resource type="Script" path="res://scripts/blox_enemy.gd" id="1_8igcj"]
[ext_resource type="Texture2D" uid="uid://rtouup2l4usq" path="res://art/enemy.png" id="1_j5kx8"]
[ext_resource type="Script" path="res://Nodes/HealthComponent.gd" id="2_hcdkv"]
[ext_resource type="Script" path="res://Nodes/HitboxComponent.gd" id="4_ytnur"]
[ext_resource type="Script" path="res://Nodes/HurtboxComponent.gd" id="5_ttd70"]
[ext_resource type="Script" path="res://scripts/Target.gd" id="6_gw44u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_sr6jb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j5kx8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ud38j"]
size = Vector2(30, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hyu6d"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oxr0i"]
size = Vector2(32, 32)

[node name="BloxEnemy" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 32
collision_mask = 33
script = ExtResource("1_8igcj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sr6jb")

[node name="PhysicsCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ud38j")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("2_hcdkv")
MAX_HEALTH = 2.0

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2
script = ExtResource("4_ytnur")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_hyu6d")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("5_ttd70")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_oxr0i")

[node name="Target" type="Node2D" parent="."]
script = ExtResource("6_gw44u")

[connection signal="no_health" from="HealthComponent" to="." method="_on_health_component_no_health"]
[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_area_entered"]
[connection signal="attacked" from="HurtboxComponent" to="." method="_on_hurtbox_component_attacked"]
